updated test result

--- a/coder/frontend/build.gradle
+++ b/coder/frontend/build.gradle
@@ -3,9 +3,19 @@ plugins{
     id 'com.github.node-gradle.node' version '3.4.0'
 }
 
-task copyDistFolder(type: Copy){
+task copyFolder(type: Copy){
     from "$rootDir/frontend/dist"
     into "$rootDir/backend/src/main/resources/static/app"
 }
 
-copyDistFolder.dependsOn(npm_run_build)
+task fastCopyDistFolder(type: Copy){
+    dependsOn 'npm_run_fastBuild'
+    dependsOn 'copyFolder'
+    tasks.findByName('copyFolder').mustRunAfter 'npm_run_fastBuild'
+}
+
+task prodCopyDistFolder(type: Copy){
+    dependsOn 'npm_run_build'
+    dependsOn 'copyFolder'
+    tasks.findByName('copyFolder').mustRunAfter 'npm_run_build'
+}
