--- a/coder/frontend/package.json
+++ b/coder/frontend/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --config webpack.prod.js",
+    "fastBuild": "webpack --config webpack.dev.js",
     "serve": "webpack serve --open --config webpack.dev.js"
   },
   "keywords": [],
