--- a/coder/backend/build.gradle
+++ b/coder/backend/build.gradle
@@ -25,7 +25,7 @@ dependencies {
 
 	implementation 'org.liquibase:liquibase-core'
 
-	runtimeOnly 'com.h2database:h2'
+	runtimeOnly 'org.postgresql:postgresql'
 
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
