--- a/coder/backend/src/main/resources/application.properties
+++ b/coder/backend/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 spring.liquibase.change-log=db/changelog/changelog-master.yaml
 logging.level.liquibase = INFO
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:test;
-spring.datasource.username=sa
-spring.datasource.password=sa
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.show-sql=true
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=postgres
 spring.h2.console.enabled=true
