--- a/coder/backend/build.gradle
+++ b/coder/backend/build.gradle
@@ -27,6 +27,8 @@ dependencies {
 
 	runtimeOnly 'org.postgresql:postgresql'
 
+	testRuntimeOnly 'com.h2database:h2'
+
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
