--- a/coder/backend/src/main/resources/db/changelog/changelog-master.yaml
+++ b/coder/backend/src/main/resources/db/changelog/changelog-master.yaml
@@ -1,3 +1,5 @@
 databaseChangeLog:
   - include:
       file: db/changelog/userTable.yaml
+  - include:
+      file: db/changelog/submittedSolutionTable.yaml
