combined short description and frontend changes

--- a/coder/backend/src/main/resources/db/changelog/changelog-master.yaml
+++ b/coder/backend/src/main/resources/db/changelog/changelog-master.yaml
@@ -5,3 +5,5 @@ databaseChangeLog:
       file: db/changelog/submittedSolutionTable.yaml
   - include:
       file: db/changelog/taskTable.yaml
+  - include:
+      file: db/changelog/evaluationTable.yaml
