save sample solution in DB

--- a/coder/backend/src/main/resources/db/changelog/changelog-master.yaml
+++ b/coder/backend/src/main/resources/db/changelog/changelog-master.yaml
@@ -7,3 +7,5 @@ databaseChangeLog:
       file: db/changelog/taskTable.yaml
   - include:
       file: db/changelog/evaluationTable.yaml
+  - include:
+      file: db/changelog/sampleSolutionTable.yaml
