--- a/coder/backend/src/main/resources/db/changelog/userTable.yaml
+++ b/coder/backend/src/main/resources/db/changelog/userTable.yaml
@@ -24,3 +24,8 @@ databaseChangeLog:
                     nullable: false
                   name: password
                   type: varchar
+              - column:
+                  constraints:
+                    nullable: false
+                  name: admin_role
+                  type: boolean
